<?xml version="1.0"?>
<package>
  <name>netft_utils</name>
  <version>1.0.0</version>
  <description>The netft_utils package contains utilities to help with managing force torque data</description>

  <author email="alexvs@utexas.edu">alexvs</author>
  <author>Derek King</author>
  <author>Andy Zelenak</author>

  <maintainer email="andyz@utexas.edu">andyz</maintainer>

  <license>See License.txt</license>

  <!-- <url type="website">http://ros.org/wiki/netft_turtle</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>netft_rdt_driver</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>netft_rdt_driver</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <export>

  </export>
</package>
