<?xml version="1.0"?>
<package>
  <name>netft_utils</name>
  <version>1.0.1</version>
  <description>C++ class and ROS node for ATI force/torque sensors connected to a Netbox. Includes gravity compensation and transformations.</description>

  <author email="alexvs@utexas.edu">Alex von Sternberg</author>
  <author>Derek King</author>
  <author>Andy Zelenak</author>

  <maintainer email="andyz@utexas.edu">Andy Zelenak</maintainer>

  <url type="website">http://wiki.ros.org/netft_utils</url>

  <license>See License.txt</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>tf</run_depend>

  <export>

  </export>
</package>
