<?xml version="1.0"?>
<package format="3">
    <name>netft_interfaces</name>
    <version>0.0.0</version>
    <description>The netft_interfaces package</description>

    <maintainer email="jodle@optimaxsi.com">Jacob Odle</maintainer>
    <author email="jodle@optimaxsi.com">Jacob Odle</author>
    <license>TODO</license>

    <!--buildtool_depend>catkin</buildtool_depend-->
    <build_depend>rosidl_default_generators</build_depend>
    <exec_depend>rosidl_default_runtime</exec_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
