<?xml version="1.0"?>
<package format="3">
  <name>netft_node</name>
  <version>1.0.1</version>
  <description>C++ class and ROS node for ATI force/torque sensors connected to a Netbox. Includes gravity compensation and transformations.</description>

  <author email="alexvs@utexas.edu">Alex von Sternberg</author>
  <author>Derek King</author>
  <author>Andy Zelenak</author>

  <maintainer email="andyz@utexas.edu">Andy Zelenak</maintainer>

  <url type="website">http://wiki.ros.org/netft_utils</url>

  <license>See License.txt</license>

  
  <depend>rclcpp</depend>
  <depend>netft_interfaces</depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>diagnostic_updater</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
